// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchForm Should render empty input if no initialQuery is provided in props 1`] = `
<DocumentFragment>
  <form
    class="flex items-center w-full"
  >
    <input
      class="input-field input-transparent-shadow-glow"
      data-testid="search-input"
      placeholder="What do you want to watch?"
      type="text"
      value=""
    />
    <button
      class="btn ml-[14px]"
      data-testid="search-button"
      type="submit"
    >
      Search
    </button>
  </form>
</DocumentFragment>
`;

exports[`SearchForm Should render input with an initial value if initialQuery is provided in props 1`] = `
<DocumentFragment>
  <form
    class="flex items-center w-full"
  >
    <input
      class="input-field input-transparent-shadow-glow"
      data-testid="search-input"
      placeholder="What do you want to watch?"
      type="text"
      value="movie title"
    />
    <button
      class="btn ml-[14px]"
      data-testid="search-button"
      type="submit"
    >
      Search
    </button>
  </form>
</DocumentFragment>
`;
